vlib/v/checker/tests/add_op_wrong_right_type_err_c.out
vlib/v/checker/tests/add_op_wrong_right_type_err_c.vv:3:18: error: mismatched types `any_int` and `map[string]int`
    1 | fn main() {
    2 |     a := map[string]int
    3 |     println(10 + a)
      |                  ^
    4 | }
